--- a/index.html
+++ b/index.html
@@ -1,27 +1,54 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>
-        Sissejuhatus erialasse koduleht
-    </title>
-</head>
+    <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="css/styles.css">
+        <title>
+            Kassidest maalähedaselt
+        </title>
+    </head>
 
-<body>
-    <div class="header">
-        <div id="header_left">
-            Lorem ipsum dolor sit amet.
+    <body>
+        <div class="header">
+            <h1>Kassid</h1>
         </div>
-        <div id="header_right">
-            Lingid siia?
+        <div id="container">
+
+
+            <div><h3>Ajalugu</h3><p>
+                Üks lahe lõik kasside ajaloost, mis on hästi huvitav.
+                </p>
+                <h3>Kuulsamate kasside top 10</h3><ol>
+
+                <li>kass</li>
+                <li>kass</li>
+                <li>kass</li>
+                <li>kass</li>
+                <li>kass</li>
+                <li>kass</li>
+                <li>kass</li>
+                <li>kass</li>
+                <li>kass</li>
+                <li>kass</li>
+                </ol>
+                <h3>nunnumate kasside top 10</h3> <ol> 
+                <li>kass</li>
+                <li>kass</li>
+                <li>kass</li>
+                <li>kass</li>
+                <li>kass</li>
+                <li>kass</li>
+                <li>kass</li>
+                <li>kass</li>
+                <li>kass</li>
+                <li>kass</li>
+
+
+                </ol></div>
         </div>
-    </div>
-    <div id="container">
-    </div>
-    <div id="footer">
-        Meie jalus
-    </div>
-</body>
+        <div id="footer">
+            Meie jalus
+        </div>
+    </body>
 </html>
