--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/styles.css">
+		<script type="text/javascript" src="javascript/akordion.js"></script>
         <title>
             Kassidest maalähedaselt
         </title>
@@ -19,6 +20,18 @@
             <div><h3>Ajalugu</h3><p>
                 Üks lahe lõik kasside ajaloost, mis on hästi huvitav.
                 </p>
+				<h3>Eri kassi liigid</h3>
+					<div class="accordionWrapper">
+					<div class="accordionItem open">
+					<h4 class="accordionItemHeading">Pärsia kass</h4>
+					<div class="accordionItemContent">
+						<h4>Päritolumaa</h4>
+						<p>Iraan</p>
+						<h4>Välimuse kirjeldus</h4>
+						<p>Pikakarvaline, ümara ja lameda näoga. Tavaliselt karvastik valge, kuid võib olla üks paljudest erinevatest värvidest.</p>
+					</div>
+					</div>
+					</div>
                 <h3>Kuulsamate kasside top 10</h3><ol>
 
                 <li>kass</li>
