rate my cat ja teine lehekylg

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </head>
 
     <body>
+        
         <div class="header">
             <h1>Kassid</h1>
         </div>
@@ -45,20 +46,9 @@
                 <li>kass</li>
                 <li>kass</li>
                 </ol>
-                <h3>nunnumate kasside top 10</h3> <ol> 
-                <li>kass</li>
-                <li>kass</li>
-                <li>kass</li>
-                <li>kass</li>
-                <li>kass</li>
-                <li>kass</li>
-                <li>kass</li>
-                <li>kass</li>
-                <li>kass</li>
-                <li>kass</li>
-
-
-                </ol></div>
+                <h3>nunnumate kasside top 10</h3> 
+                <p><a href=page2.html target="_self">Siin saad rateda kasse</a></p>
+            </div>
         </div>
         <div id="footer">
             Meie jalus
