--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/styles.css">
-		<script type="text/javascript" src="javascript/akordion.js"></script>
+		<script src="javascript/akordion.js"></script>
         <title>
             Kassidest maalähedaselt
         </title>
@@ -21,16 +21,9 @@
                 Üks lahe lõik kasside ajaloost, mis on hästi huvitav.
                 </p>
 				<h3>Eri kassi liigid</h3>
-					<div class="accordionWrapper">
-					<div class="accordionItem open">
-					<h4 class="accordionItemHeading">Pärsia kass</h4>
-					<div class="accordionItemContent">
-						<h4>Päritolumaa</h4>
-						<p>Iraan</p>
-						<h4>Välimuse kirjeldus</h4>
+					<button class="accordion">Pärsia kass</button>
+					<div class="panel">
 						<p>Pikakarvaline, ümara ja lameda näoga. Tavaliselt karvastik valge, kuid võib olla üks paljudest erinevatest värvidest.</p>
-					</div>
-					</div>
 					</div>
                 <h3>Kuulsamate kasside top 10</h3><ol>
 
