--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <li>kass</li>
                 </ol>
                 <h3>nunnumate kasside top 10</h3> 
-                <p><a href=page2.html target="_self">Siin saad rateda kasse</a></p>
+                <button class="btn rate"> <a href=page2.html target="_self" ></a> siin saad rateda kiisusud </button>
             </div>
         </div>
         <div id="footer">
