--- a/page2.html
+++ b/page2.html
@@ -8,11 +8,10 @@
             Rate my cat
         </title>
     </head>
-
     <body>
         
         <div class="header">
-            <h1>Kassid</h1>
+            <h1>Rate my cat</h1>
         </div>
         <div id="container">
 
