Rate nupp korda

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/styles.css">
 		<script type="text/javascript" src="javascript/akordion.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <title>
             Kassidest maalähedaselt
         </title>
@@ -46,8 +47,8 @@
                 <li>kass</li>
                 <li>kass</li>
                 </ol>
-                <h3>nunnumate kasside top 10</h3> 
-                <button class="btn rate"> <a href=page2.html target="_self" ></a> siin saad rateda kiisusud </button>
+                <h3>nunnumate kasside top 10</h3> <a href=page2.html target="_self" >
+                <button class="btn rate">  siin saad rateda kiisusud </button></a>
             </div>
         </div>
         <div id="footer">
