--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/styles.css">
 		<script src="javascript/akordion.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js%22%3E"</script>
         <title>
             Kassidest maalähedaselt
         </title>
@@ -21,11 +22,10 @@
                 Üks lahe lõik kasside ajaloost, mis on hästi huvitav.
                 </p>
 				<h3>Eri kassi liigid</h3>
-					<button class="accordion">Pärsia kass</button>
-					<div class="panel">
-						<p>Pikakarvaline, ümara ja lameda näoga. Tavaliselt karvastik valge, kuid võib olla üks paljudest erinevatest värvidest.</p>
-					</div>
-                <h3>Kuulsamate kasside top 10</h3><ol>
+				<h4 class="title">Pärsia kass</h4>
+				<p>Pikakarvaline, ümara ja lameda näoga. Tavaliselt karvastik valge, kuid võib olla üks paljudest erinevatest värvidest.</p>
+                <h3>Kuulsamate kasside top 10</h3>
+				<ol>
 
                 <li>kass</li>
                 <li>kass</li>
