--- a/page2.html
+++ b/page2.html
@@ -3,21 +3,32 @@
 
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/styles.css" href="javascript/t2hed.js">
         <title>
             Rate my cat
         </title>
     </head>
     <body>
-        
+
         <div class="header">
             <h1>Rate my cat</h1>
         </div>
         <div id="container">
+            <form>
+                <fieldset>
+                    <span class="star-cb-group">
+                        <input type="radio" id="rating-5" name="rating" value="5" /><label for="rating-5">5</label>
+                        <input type="radio" id="rating-4" name="rating" value="4" checked="checked" /><label for="rating-4">4</label>
+                        <input type="radio" id="rating-3" name="rating" value="3" /><label for="rating-3">3</label>
+                        <input type="radio" id="rating-2" name="rating" value="2" /><label for="rating-2">2</label>
+                        <input type="radio" id="rating-1" name="rating" value="1" /><label for="rating-1">1</label>
+                        <input type="radio" id="rating-0" name="rating" value="0" class="star-cb-clear" /><label for="rating-0">0</label>
+                    </span>
+                </fieldset>
+            </form>
+
 
         </div>
-        <div id="footer">
-            Meie jalus
-        </div>
+
     </body>
 </html>
