--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="css/styles.css" href="javascript/t2hed.js">
+        <link rel="stylesheet" href="css/styles.css">
         <title>
             Rate my cat
         </title>
@@ -15,16 +15,21 @@
         </div>
         <div id="container">
             <form>
-                <fieldset>
-                    <span class="star-cb-group">
-                        <input type="radio" id="rating-5" name="rating" value="5" /><label for="rating-5">5</label>
-                        <input type="radio" id="rating-4" name="rating" value="4" checked="checked" /><label for="rating-4">4</label>
-                        <input type="radio" id="rating-3" name="rating" value="3" /><label for="rating-3">3</label>
-                        <input type="radio" id="rating-2" name="rating" value="2" /><label for="rating-2">2</label>
-                        <input type="radio" id="rating-1" name="rating" value="1" /><label for="rating-1">1</label>
-                        <input type="radio" id="rating-0" name="rating" value="0" class="star-cb-clear" /><label for="rating-0">0</label>
-                    </span>
-                </fieldset>
+                <form id="ratingsForm">
+                    <div class="stars">
+                        <input type="radio" name="star" class="star-1" id="star-1" />
+                        <label class="star-1" for="star-1">1</label>
+                        <input type="radio" name="star" class="star-2" id="star-2" />
+                        <label class="star-2" for="star-2">2</label>
+                        <input type="radio" name="star" class="star-3" id="star-3" />
+                        <label class="star-3" for="star-3">3</label>
+                        <input type="radio" name="star" class="star-4" id="star-4" />
+                        <label class="star-4" for="star-4">4</label>
+                        <input type="radio" name="star" class="star-5" id="star-5" />
+                        <label class="star-5" for="star-5">5</label>
+                        <span></span>
+                    </div>
+                </form>
             </form>
 
 
