--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
             <div><h3>Ajalugu</h3><p>
                 Üks lahe lõik kasside ajaloost, mis on hästi huvitav.
                 </p>
-				<h3>Eri kassi liigid</h3><a href="#" class = "title">
-                <h4>Pärsia kass</h4></a>
-				<p class="accordion_content" style = "display: none">Pikakarvaline, ümara ja lameda näoga. Tavaliselt karvastik valge, kuid võib olla üks paljudest erinevatest värvidest.</p>
-                <h3>Kuulsamate kasside top 10</h3>
+				<h3>Eri kassi liigid</h3>
+				<div class="tab">
+				<h4 class = "title">PÄRSIA KASS</h4>
+					<p class="accordion_content" style = "display: none">Pikakarvaline, ümara ja lameda näoga. Tavaliselt karvastik valge, kuid võib olla üks paljudest erinevatest värvidest.</p>
+                </div>
+				<h3>Kuulsamate kasside top 10</h3>
 				<ol>
                 <li>kass</li>
                 <li>kass</li>
