--- a/page2.html
+++ b/page2.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/t2hekesed.css">
         <title>
             Rate my cat
         </title>
