--- a/index.html
+++ b/index.html
@@ -2,52 +2,61 @@
 <html>
 
     <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="css/styles.css">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/styles.css">
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script type="text/javascript" src="javascript/akordion.js"></script>
-        
-        <title>
-            Kassidest maalähedaselt
-        </title>
-    </head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="javascript/akordion.js"></script>
 
-    <body>
-        
-        <div class="header">
-            <h1>Kassid</h1>
-        </div>
-        <div id="container">
+    <title>
+        Kassidest maalähedaselt
+    </title>
+</head>
+
+<body>
+
+    <div class="header">
+        <h1>Kassid</h1>
+    </div>
+    <div id="container">
 
 
-            <div><h3>Ajalugu</h3><p>
+        <div>
+            <h3>Ajalugu</h3>
+            <p>
                 Üks lahe lõik kasside ajaloost, mis on hästi huvitav.
-                </p>
-				<h3>Eri kassi liigid</h3>
-				<div class="tab">
-				<h4 class = "title">PÄRSIA KASS</h4>
-					<p class="accordion_content" style = "display: none">Pikakarvaline, ümara ja lameda näoga. Tavaliselt karvastik valge, kuid võib olla üks paljudest erinevatest värvidest.</p>
-                </div>
-				<h3>Kuulsamate kasside top 10</h3>
-				<ol>
-                <li>kass</li>
-                <li>kass</li>
-                <li>kass</li>
-                <li>kass</li>
-                <li>kass</li>
-                <li>kass</li>
-                <li>kass</li>
-                <li>kass</li>
-                <li>kass</li>
-                <li>kass</li>
-                </ol>
-                <h3>nunnumate kasside top 10</h3> <a href=page2.html target="_self" >
-                <button class="btn rate">  siin saad rateda kiisusud </button></a>
+            </p>
+            <h3>Eri kassi liigid</h3>
+            <div class="tab">
+                <h4 class="title">PÄRSIA KASS</h4>
+                <p class="accordion_content" style="display: none">Pikakarvaline, ümara ja lameda näoga. Tavaliselt karvastik valge, kuid võib olla üks paljudest erinevatest värvidest.</p>
             </div>
+            <h3>Kuulsamate kasside top 10</h3>
+            <ol>
+                <li>kass</li>
+                <li>kass</li>
+                <li>kass</li>
+                <li>kass</li>
+                <li>kass</li>
+                <li>kass</li>
+                <li>kass</li>
+                <li>kass</li>
+                <li>kass</li>
+                <li>kass</li>
+            </ol>
+            <h3>nunnumate kasside top 10</h3>
+            <div>
+                <a href="page3.html">Risto Kass</a>
+                    </div>
+            <div>
+            <a href=page2.html target="_self">
+                <button class="btn rate">  siin saad rateda kiisusud </button></a></div>
+            <p></p>
+
         </div>
-        <div id="footer">
-            Meie jalus
-        </div>
-    </body>
+    </div>
+    <div id="footer">
+        Meie jalus
+    </div>
+</body>
 </html>
