--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div><a href="page3.html"><p>Risto Kass</p></a></div>
                 <div>
                 <a href = page2.html target = "_self" >
-                    <button class = "btn rate">  siin saad rateda kiisusud </button></a></div>
+                    <button class = "btn-rate">  siin saad rateda kiisusud </button></a></div>
             </div>
         </div>
         <div id = "footer">
