--- a/page2.html
+++ b/page2.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="css/t2hekesed.css">
+        <link rel="stylesheet" href="css/kiisupildid.css">
         <script type="text/javascript" src="javascript/pildid.js"></script>
         <title>
             Rate my cat
