Mingi merge plus pildid

--- a/page2.html
+++ b/page2.html
@@ -19,7 +19,7 @@
         <div id="mySlides">
             <div class="slideshow-container">
 
-                <div class="mySlides fade"><img src="pilt (1).jpg" style="width: 100"></div>
+                <div class="mySlides fade"><img src="pilt (1).jpg" style="width: 100" alt="kassipilt1"></div>
                 <div class="mySlides fade"><img src="pilt (2).jpg" style="width: 100"></div>
                 <div class="mySlides fade"><img src="pilt (3).jpg" style="width: 100"></div>
                 <div class="mySlides fade"><img src="pilt (4).jpg" style="width: 100"></div>
@@ -96,9 +96,5 @@
                 </div>
             </form>
         </form>
-
-
-        </div>
-
     </body>
 </html>
