--- a/index.html
+++ b/index.html
@@ -29,19 +29,22 @@
 					<div class = "accordion-content" style = "display: none">
 						<table class = "cat-table">
 						<tr>
-							<th>Päritolumaa:</th>
+							<th>Päritolumaa: </th>
 							<td>Iraan</td>
+							<td rowspan = "3"><img class = "cat-image" src = "img/examples/parsia_kass.jpg"></td>
 						</tr>
 						<tr>
-							<th>Iseloomustus:</th>
-							<td>Pikakarvaline, ümara ja lameda näoga. Tavaliselt karvastik valge, kuid võib olla üks paljudest erinevatest värvidest.</td>
+							<th>Välimus: </th>
+							<td>Pikakarvaline, jässaka keha ning lameda ümara näoga. Tavaliselt karvastik valge, kuid võib olla üks paljudest erinevatest värvidest.</td>
+						</tr>
+						<tr>
+							<th>Iseloom: </th>
+							<td>Rahulik, üldiselt leebe ja sõbralik. Peremehele lojaalne. Ei kratsi inimesi kergesti.</td>
 						</tr>
 						</table>
 					</div>
                 </div>
                 <h3>nunnumate kasside top 10</h3>
-                <div><a href="page3.html"><p>Risto Kass</p></a></div>
-                <div>
                 <a href = page2.html target = "_self" >
                     <button class = "btn rate">  siin saad rateda kiisusud </button></a></div>
             </div>
