--- a/page3.html
+++ b/page3.html
@@ -10,13 +10,13 @@
     </title>
 </head>
 
-<body>
+<body onload="showSlides()">
     <div class="header">
         <h1>Pharah the cat</h1>
     </div>
 
     <div id="container">
-        <div class="pildid">
+        <div class="pildid" style="text-align:left" >
 
             <div class="slideshow-container">
 
@@ -48,8 +48,33 @@
                     <img src="img/Pharah/pilt5.jpg" style="width:100%">
                     <div class="text">Uues kodus</div>
                 </div>
+                <div class="mySlides fade">
+                    <div class="numbertext">6 / 10</div>
+                    <img src="img/Pharah/pilt6.jpg" style="width:100%">
+                    <div class="text">WAS IST DAS!?!?</div>
+                </div>
+                <div class="mySlides fade">
+                    <div class="numbertext">7 / 10</div>
+                    <img src="img/Pharah/pilt7.jpg" style="width:100%">
+                    <div class="text" style="background-color:black">See kass on ka geenius</div>
+                </div>
+                <div class="mySlides fade">
+                    <div class="numbertext">8 / 10</div>
+                    <img src="img/Pharah/pilt8.jpg" style="width:100%">
+                    <div class="text">Telekas väsitas ära</div>
+                </div>
+                <div class="mySlides fade">
+                    <div class="numbertext">9 / 10</div>
+                    <img src="img/Pharah/pilt9.jpg" style="width:100%">
+                    <div class="text">Juba järgmine pesa</div>
+                </div>
+                <div class="mySlides fade">
+                    <div class="numbertext">10 / 10</div>
+                    <img src="img/Pharah/pilt10.jpg" style="width:100%">
+                    <div class="text">"Ära mine Sissejuhatus Erialasse loengusse"</div>
+                </div>
 
-                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="prev" style="text-align:left" onclick="plusSlides(-1)">&#10094;</a>
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
             </div>
