--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
                 </div>
 				
                 <h3>Mõned nunnumad kassid</h3>
+				<div><a href="page3.html"><p>Risto Kass</p></a></div>
                 <a href = "page2.html" target = "_self" ><button class = "btn rate">  Siin saad rate'ida kiisusid! </button></a></div>
             </div>
-        </div>
         <div id = "footer">
             Meie jalus
-    </div>
+		</div>
 </body>
 </html>
