--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <a href = "page2.html" target = "_self" ><button class = "btn rate">  Siin saad rate'ida kiisusid! </button></a></div>
             </div>
         <div id = "footer">
-            Meie jalus
+            COPYRIGHT©™
 		</div>
 </body>
 </html>
