--- a/page2.html
+++ b/page2.html
@@ -160,39 +160,38 @@
                         <img src="img/Rated/pilt%20(46).jpg" style="width:100%">
                     </div>
                     <div class="mySlides fade">
-                        <h3>Aitab küll</h3>
-                        <div class="video_container">
-                            <iframe src="https://www.youtube.com/watch?v=lvTnAYoPD_4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
-                        </div>
+                        <img src="img/Rated/pilt%20(46).jpg" style="width:100%">
                     </div>
-                </div>
-                <br>
-                <div style="text-align:center">
-                    <form>
 
-                        <form id="ratingsForm" ><a class="next" onclick="plusSlides(1)">
-
-                            <div class="stars">
-
-                                <input type="radio" name="star" class="star-1" id="star-1" />
-                                <label class="star-1" for="star-1">1</label>
-                                <input type="radio" name="star" class="star-2" id="star-2" />
-                                <label class="star-2" for="star-2">2</label>
-                                <input type="radio" name="star" class="star-3" id="star-3" />
-                                <label class="star-3" for="star-3">3</label>
-                                <input type="radio" name="star" class="star-4" id="star-4" />
-                                <label class="star-4" for="star-4">4</label>
-                                <input type="radio" name="star" class="star-5" id="star-5" />
-                                <label class="star-5" for="star-5">5</label>
-                                <span></span>
-                            </div></a>
-                        </form>
-                    </form>
                 </div>
             </div>
+            <br>
+            <div style="text-align:center">
+                <form>
+
+                    <form id="ratingsForm" ><a class="next" onclick="plusSlides(1)">
+
+                        <div class="stars">
+
+                            <input type="radio" name="star" class="star-1" id="star-1" />
+                            <label class="star-1" for="star-1">1</label>
+                            <input type="radio" name="star" class="star-2" id="star-2" />
+                            <label class="star-2" for="star-2">2</label>
+                            <input type="radio" name="star" class="star-3" id="star-3" />
+                            <label class="star-3" for="star-3">3</label>
+                            <input type="radio" name="star" class="star-4" id="star-4" />
+                            <label class="star-4" for="star-4">4</label>
+                            <input type="radio" name="star" class="star-5" id="star-5" />
+                            <label class="star-5" for="star-5">5</label>
+                            <span></span>
+                        </div></a>
+                    </form>
+                </form>
+            </div>
         </div>
-        <div id="footer">
         </div>
+    <div id="footer">
+    </div>
 
 
 
