--- a/page3.html
+++ b/page3.html
@@ -13,6 +13,7 @@
 <body onload="showSlides()">
     <div class="header">
         <h1>Pharah the cat</h1>
+        <div id="tagasi" style="text-align: left; text-decoration:none;"><a href="index.html">Tagasi esilehele</a></div>
     </div>
 
     <div id="container">
