--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
 				
                 <h3>Mõned nunnumad kassid</h3>
-				<div><a href="page3.html"><p>Risto Kass</p></a></div>
+				<div><a href="page3.html"><h1>Risto Kass</h1></a></div>
                 <a href = "page2.html" target = "_self" ><button class = "btn rate">  Siin saad rate'ida kiisusid! </button></a></div>
             </div>
         <div id = "footer">
