--- a/page2.html
+++ b/page2.html
@@ -14,6 +14,7 @@
     <body onload="showSlides()">
         <div class="header">
             <h1>Rate my Cat</h1>
+            <div style="text-align: left"><a href="index.html">Tagasi esilehele</a></div>
         </div>
 
         <div id="container">
