--- a/index.html
+++ b/index.html
@@ -84,13 +84,56 @@
 						</table>
 					</div>
                 </div>
+				<div class = "accordion">
+				<label class = "title">SIIAMI KASS</label>
+					<div class = "accordion-content" style = "display: none">
+						<table class = "cat-table">
+						<tr>
+							<th>Päritolumaa: </th>
+							<td>Tai</td>
+							<td rowspan = "3"><img align = "right" class = "cat-image" src = "img/examples/siiami_kass.jpg"></td>
+						</tr>
+						<tr>
+							<th>Välimus: </th>
+							<td>Silmad mandlikujulised, pea kolmnurkne ja peenike. Sale, nõtke keha, mis on kaetud iseloomuliku kreemja karvastikuga.</td>
+						</tr>
+						<tr>
+							<th>Iseloom: </th>
+							<td>Energiline, vali ja aktiivne suhtleja. Armastab olla tähelepanu keskpunktis.</td>
+						</tr>
+						</table>
+					</div>
+                </div>
+				<div class = "accordion">
+				<label class = "title">NORRA METSKASS</label>
+					<div class = "accordion-content" style = "display: none">
+						<table class = "cat-table">
+						<tr>
+							<th>Päritolumaa: </th>
+							<td>Tai</td>
+							<td rowspan = "3"><img align = "right" class = "cat-image" src = "img/examples/norra_metskass.jpg"></td>
+						</tr>
+						<tr>
+							<th>Välimus: </th>
+							<td>Karvkate väga paks, kõrvades ja käppadel pikad tutid. Pikk saba on pidevalt õhus. Nägu kolmnurkne sirge ninaga.</td>
+						</tr>
+						<tr>
+							<th>Iseloom: </th>
+							<td>Uudishimulik, tark ja rahumeelne. Sellele vaatamata armastab nii inimeste kui ka teiste loomade lähedust.</td>
+						</tr>
+						</table>
+					</div>
+                </div>
 				
                 <h3>Mõned nunnumad kassid</h3>
-				<div><a href="page3.html"><h1>Risto Kass</h1></a></div>
+				<div><a href="page3.html"><h1>Risto kass</h1></a></div>
                 <a href = "page2.html" target = "_self" ><button class = "btn rate">  Siin saad rate'ida kiisusid! </button></a></div>
-            </div>
+            <br>
+			<br>
+			
+			</div>
         <div id = "footer">
-            COPYRIGHT©™
+            COPYRIGHT©™ (credit to www.kassid.ee eri tõugu kasside piltide eest)
 		</div>
 </body>
 </html>
