--- a/page3.html
+++ b/page3.html
@@ -57,7 +57,7 @@
                 <div class="mySlides fade">
                     <div class="numbertext">7 / 10</div>
                     <img src="img/Pharah/pilt7.jpg" style="width:100%">
-                    <div class="text" style="background-color:black">See kass on ka geenius</div>
+                    <div class="text">See kass on ka geenius</div>
                 </div>
                 <div class="mySlides fade">
                     <div class="numbertext">8 / 10</div>
@@ -96,7 +96,21 @@
 
 
         </div>
-
+<div class = "content">
+        <h2>Kes on Pharah?</h2>
+    <p>Pharah sündis 1. mail 2018 ainukese järglasena kassile nimega Tikker. Tegemist on emase isendiga</p>
+    <p>Tema lemmiktegevusteks on magamine, uinakute tegemine, une nägemine, norskamine ja marutamine. 
+        Lemmik magamiskohaks on tühi lillekast.
+        Vabal ajal meeldib talle veel omanike jalgade närimine, tapeedi lõhkumine ja makroflexi söömine.
+    Pharah lemmikmänguasjadeks on McDonaldsi juustuburgeri paber, elektroonikajuhtmed ja nagis rippuvad riided. Kui omanik teeb vea ja paneb toidukaussi midagi muud kui Sheba konserv, siis algab vali näljastreik, ei aita isegi päris liha.
+    Hetkel õpib Pharah veel vetsus käimist, nii et pärast midagi kuhugi külge rippuma ei jääks, rippuvatest junnidest vabaneb ennast põrandale hõõrudes(ilusad hommikud).
+    Tavaliselt ärkab hommikuti kell seitse ja tunneb tugevat vajadust sellest ka valjult teisi teavitada.
+        </p><p>
+    Pharah vaenlasteks on tolmuimeja, putukad ja apelsini koored. Triggerib ka päikesekiirte peale.
+    </p>
+    <p>
+    Aga muidu on tore kass.</p>
+        </div>
         <div class="kassivideo">
             <h3>Kaks lühikest videot Pharahst ja tema tarkusest.</h3>
             <div class="video_container">
