--- a/page3.html
+++ b/page3.html
@@ -12,7 +12,7 @@
 
 <body onload="showSlides()">
     <div class="header">
-        <h1>Pharah the cat</h1>
+        <h1>Pharah The Cat</h1>
         <div style="text-align: left"><a href="index.html">Tagasi esilehele</a></div>
     </div>
 
@@ -57,7 +57,7 @@
                 <div class="mySlides fade">
                     <div class="numbertext">7 / 10</div>
                     <img src="img/Pharah/pilt7.jpg" style="width:100%">
-                    <div class="text" style="background-color:black">See kass on ka geenius</div>
+                    <div class="text">See kass on ka geenius</div>
                 </div>
                 <div class="mySlides fade">
                     <div class="numbertext">8 / 10</div>
@@ -72,7 +72,7 @@
                 <div class="mySlides fade">
                     <div class="numbertext">10 / 10</div>
                     <img src="img/Pharah/pilt10.jpg" style="width:100%">
-                    <div class="text">"Ära mine Sissejuhatus Erialasse loengusse"</div>
+                    <div class="text">"Ära mine 'Sissejuhatus erialasse' loengusse"</div>
                 </div>
 
                 <a class="prev" style="text-align:left" onclick="plusSlides(-1)">&#10094;</a>
@@ -98,7 +98,7 @@
         </div>
 
         <div class="kassivideo">
-            <h3>Kaks lühikest videot Pharahst ja tema tarkusest.</h3>
+            <h3>Kaks lühikest videot Pharahst ja tema tarkusest</h3>
             <div class="video_container">
                 <iframe src="https://www.youtube.com/embed/tfp7NShoQbs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
             </div>
@@ -110,6 +110,7 @@
         </div>
     </div>
     <div id="footer">
+	COPYRIGHT©™ Risto Photography
     </div>
 
 
