--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset = "utf-8">
         <link rel = "stylesheet" href = "css/styles.css">
+		<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Averia Libre'>
+		<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Averia Serif Libre'>
         <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script type = "text/javascript" src = "javascript/akordion.js"></script>
+		<script src = "javascript/akordion.js"></script>
         
         <title>
             Kassidest maalähedaselt
@@ -14,7 +16,7 @@
     <body>
         
         <div class = "header">
-            <h1>Kassid</h1>
+            <h1>KASSIMAAILM</h1>
         </div>
         <div id = "container">
 
