--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             <div>
                 <h2>Lõbusad faktid kasside kohta</h2>
-				<table style="width:auto display:block; margin-left:auto; margin-right:auto; text-align:left">
+				<table class = "faktid">
 				<tr><td>
                 <dl>
                     <li>Kassil on 38 kromosoomi.</li>
@@ -37,7 +37,7 @@
 				</dl>
 				</td></tr>
 				</table>
-                <h2>Eri kasside liigid</h2>
+                <h2>Eri kasside tõud</h2>
                 <div class = "accordion">
                     <label class = "title">PÄRSIA KASS</label>
                     <div class = "accordion-content" style = "display: none">
@@ -138,8 +138,8 @@
                         </table>
                     </div>
                 </div>
-
-                <h3>Mõned nunnumad kassid</h3>
+				<br>
+                <h2>Mõned nunnumad kassid</h2>
                 <div><a href="page3.html"><h1>Risto kass</h1></a></div>
                 <a href = "page2.html" target = "_self" ><button class = "btn rate">  Siin saad rate'ida kiisusid! </button></a></div>
             <br>
