--- a/page3.html
+++ b/page3.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/page3.css">
+	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Averia Libre'>
+	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Averia Serif Libre'>
     <script type="text/javascript" src="javascript/ristoslaidid.js"></script>
     <title>
         Pharah
@@ -13,11 +15,11 @@
 <body onload="showSlides()">
     <div class="header">
         <h1>Pharah The Cat</h1>
-        <div style="text-align: left"><a href="index.html">Tagasi esilehele</a></div>
+        <div style="text-align: left; padding: 0 0 0 40px; font-size:25px"><a href="index.html">Tagasi esilehele</a></div>
     </div>
 
     <div id="container">
-        <div class="pildid" style="text-align:left" >
+        <div class="pildid" style="text-align:left">
 
             <div class="slideshow-container">
 
@@ -98,12 +100,12 @@
         </div>
 <div class = "content">
         <h2>Kes on Pharah?</h2>
-    <p>Pharah sündis 1. mail 2018 ainukese järglasena kassile nimega Tikker. Tegemist on emase isendiga</p>
+    <p>Pharah sündis 1. mail 2018 ainukese järglasena kassile nimega Tikker. Tegemist on emase isendiga.</p>
     <p>Tema lemmiktegevusteks on magamine, uinakute tegemine, une nägemine, norskamine ja marutamine. 
         Lemmik magamiskohaks on tühi lillekast.
         Vabal ajal meeldib talle veel omanike jalgade närimine, tapeedi lõhkumine ja makroflexi söömine.
     Pharah lemmikmänguasjadeks on McDonaldsi juustuburgeri paber, elektroonikajuhtmed ja nagis rippuvad riided. Kui omanik teeb vea ja paneb toidukaussi midagi muud kui Sheba konserv, siis algab vali näljastreik, ei aita isegi päris liha.
-    Hetkel õpib Pharah veel vetsus käimist, nii et pärast midagi kuhugi külge rippuma ei jääks, rippuvatest junnidest vabaneb ennast põrandale hõõrudes(ilusad hommikud).
+    Hetkel õpib Pharah veel vetsus käimist, nii et pärast midagi kuhugi külge rippuma ei jääks, rippuvatest junnidest vabaneb ennast põrandale hõõrudes (ilusad hommikud).
     Tavaliselt ärkab hommikuti kell seitse ja tunneb tugevat vajadust sellest ka valjult teisi teavitada.
         </p><p>
     Pharah vaenlasteks on tolmuimeja, putukad ja apelsini koored. Triggerib ka päikesekiirte peale.
