--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <dl>
                     <li>Kassil on 38 kromosoomi.</li>
                     <li>Kassi aju kaalub keskmiselt 31,4 grammi.</li>
-                    <li>Kõige raksem kass kaalus 23.3kg.</li>
+                    <li>Kõige raskem kass kaalus 23.3kg.</li>
                     <li>Seni kõige kauem elanud kass oli 38 aastat ja 3 päeva vana.</li>
                     <li>Kõge pikemema karvaga kassi karv oli 25.6cm pikk.</li>
                     <li>Maailma kõige rikkamale kassile pärandati £7.000.000.</li>
